# DAA-project

./: .gitignore  Problem.md  README.md  analyze_route.py  check_all_routes.py  check_greedy.py  debug_aco.py  demo_aco.py  main.py  pyproject.toml  test_aco_complete.py  test_aco_quick.py  test_precios.py  test_simple.py  test_special_instances.py  verify_detailed.py  verify_solution.py  visualizar_grafo.py
base_model/: BaseModel.py  __init__.py  base_model.py
brute_force/: BruteForce.py  __init__.py
daa/: main.py  tests.py
generator/: random_gen.py
informe/: Makefile  README.md  report.tex
instances/: __init__.py  micro.py  predefined.py  robust.py
solver/models/: ACO_README.md  __init__.py  aco.py  brute.py  ga_beam.py  greedy.py  heuristics.py  solver.py
solver/schemas/: dtp.py
solver/tests/: test_common.py  test_compare.py  test_interactive.py  test_models.py  test_progress.py  test_robust.py
