[project]
name = "daa-project"
version = "0.1.0"
description = "Dutch Trader solver and approximations"
authors = [{ name = "DAA Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pytest>=9.0.2",
]

[project.scripts]
main = "daa.main:main"
solver = "solver:test_solver"
compare = "solver.tests.test_compare:display_comparison"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solver", "daa", "generator", "instances"]
